Added header and footer to Tuesday webpage

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Kellys Tuesday Webpage</title>
 </head>
 <body>
-    
+    <h1>Kellys Tuesday Webpage</h1>
+    <h6>Kellys Webpage for Tuesday</h6>
+    <footer>
+        <p>&copy; Kelly Tuesday</p>
+    </footer>
 </body>
 </html>
