amended copyright name

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Kellys Tuesday Webpage</h1>
     <h6>Kellys Webpage for Tuesday</h6>
     <footer>
-        <p>&copy; Kelly Tuesday</p>
+        <p>&copy; Kelly Tuesday copyright</p>
     </footer>
 </body>
 </html>
